replicalimits/negative-test-case.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: disallowed-deployment
spec:
  selector:
    matchLabels:
      app: alpine
  replicas: 100
  template:
    metadata:
      labels:
        app: alpine
    spec:
      containers:
      - name: alpine
        image: alpine:3.13.7
      command:
        - /bin/sh
        - "-c"
        - "sleep 60m"
        ports:
        - containerPort: 80
